# hidapi-rs

./: Cargo.toml
src/: error.rs  lib.rs  windows.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
src/os/linux/: hid.rs
